BugFix: Select2 button had wrong height

--- a/src/Resources/public/admin-lte/css/style.css
+++ b/src/Resources/public/admin-lte/css/style.css
@@ -252,6 +252,7 @@ input[type = checkbox].form-control {
 .recordListTd > ul {
     border: none !important;
     background-color: transparent !important;
+    height:auto !important;
 }
 
 
